Last Commited for Seminar

--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
             <p>Summer Sale For All Swim And Free Express Delivery - OFF 50%</p>
             <a href="shop.html">Shop now</a>
         </div>
-        <div class="menu">
+             <div class="menu">
             <h2>E-commerce</h2>
             <a href="index.html">Home</a>
             <a href="contact.html">Contact</a>
@@ -21,9 +21,11 @@
             <a href="creataccount.html">Sign Up</a>
             <a href="shop.html"> Shop</a>
         <input type="text" placeholder="What you looking for?">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <p>Username</p>
-        <a href="login.html" class="log">Log in</a>
+        <a href="" class="fa-solid fa-magnifying-glass"></a>
+          <a href="./userdetail.html"><i class="fa-solid fa-user"></i></a>
+       <a href="./shop.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <p class="un" id="username11">Username</p>
+    <button class="log" id="logBtn">Log out</button>
         </div>
         <table >
             <thead>
@@ -37,8 +39,9 @@
             <tbody class="addedElements">
             </tbody>
             </table>
-            <script src="cart.js"></script>
         </div>
-        </div>
+    </div>
+    <!-- <script src="cart.js"></script> -->
+     <script src="./cart.js"></script>
 </body>
 </html>
