--- a/contact.html
+++ b/contact.html
@@ -14,21 +14,25 @@
             <a href="shop.html">Shop now</a>
         </div>
         <div class="menu">
-            <h2>E-commerce</h2>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <a href="creataccount.html">Sign Up</a>
-            <a href="shop.html"> Shop</a>
-        <input type="text" placeholder="What you looking for?">
-        <a href="" class="fa-solid fa-magnifying-glass"></a>
-        <p class="user">Username</p>
-        <a href="login.html" class="log">Log in</a>
-        </div>
+        <h1>E-commerce</h1>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="creataccount.html">Sign Up</a>
+        <a href="shop.html"> Shop</a>
+    <input type="text" placeholder="What you looking for?">
+    <i class="fa-solid fa-magnifying-glass"></i>
+         <a href="./userdetail.html"><i class="fa-solid fa-user"></i></a>
+    <p class="un" id="username11">Username</p>
+      <button class="log" id="logBtn">Log in</button>
+    </div>
+
+
         <div class="a">
             <P><a href="index.html">Home /</a> <a href="contact.html"><b>Contact</b></a></P>
         </div>
-    <div class="call">
+   <div class="flex">
+     <div class="call">
         <div class="i">
             <i class="fa-solid fa-phone fa-spin-pulse"></i>
         </div>
@@ -36,6 +40,19 @@
         <p id="p1">We are available 24/7, 7 days a week.</p>
         <p id="p2">Phone: +8801611112222</p>
 </div>
+<div class="inputs">
+    <form action="">
+        <input id="inp1" type="text" placeholder="Your name">
+    <input id="inp2" type="text" placeholder="Your name">
+    <input id="inp3" type="number" placeholder="Your Phone">
+    <input id="inp4" type="text" placeholder="Your message"> <br>
+    <button>Send Message</button>
+    </form>
+</div>
+   </div>
+
+
+
 <div class="write">
     <div class="i2">
         <i class="fa-solid fa-envelope fa-spin-pulse"></i>
@@ -45,14 +62,8 @@
     <p id="p4">Emails: customer@exclusive.com</p>
     <p id="p5">Emails: support@exclusive.com</p>
 </div>
-<div class="inputs">
-    <input id="inp1" type="text" placeholder="your name">
-    <input id="inp2" type="email" placeholder="your name">
-    <input id="inp3" type="number" placeholder="your Phone">
-    <input id="inp4" type="text" placeholder="your message">
-    <button>Send Message</button>
-</div>
-<div class="contact">
+
+<!-- <div class="contact">
     <div class="exclusive">
         <h2>Exlusive</h2>
         <h4>Subscribe</h4>
@@ -95,8 +106,11 @@
 </div>
 <div class="right">
     <h3>Copyright Rimel 2022.All right reserved</h3>
-</div>
-    </div>
+</div> -->
+
+ <div class="footer">
+            <img src="./stttsrty.jpg" alt="">
+        </div>
     </div>
     <script src="contact.js"></script>
 </body>
