--- a/creataccount.html
+++ b/creataccount.html
@@ -13,23 +13,24 @@
             <p>Summer Sale For All Swim And Free Express Delivery - OFF 50%</p>
             <a href="shop.html">Shop now</a>
         </div>
-        <div class="menu">
-            <h2>E-commerce</h2>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <a href="creataccount.html">Sign Up</a>
-            <a href="shop.html"> Shop</a>
-        <input type="text" placeholder="What you looking for?">
-        <i href="" class="fa-solid fa-magnifying-glass"></i>
-        <p class="user">Username</p>
-        <a href = "login.html" class="log">Log in</a>
-        </div>
+       <div class="menu">
+        <h1>E-commerce</h1>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="creataccount.html">Sign Up</a>
+        <a href="shop.html"> Shop</a>
+    <input type="text" placeholder="What you looking for?">
+    <i class="fa-solid fa-magnifying-glass"></i>
+    <i class="fa-solid fa-user"></i>
+    <p class="un" id="username11">Username</p>
+      <button class="log" id="logBtn">Log in</button>
+    </div>
         <div class="account2">
             <h1>Create an account</h1>
             <p class="name">Name</p>
             <input id="inp1" type="text">
-            <p class="surname">surname</p>
+            <p class="surname">Surname</p>
             <input id="inp2" type="text">
             <p class="mail">Email</p>
             <input id="inp3" type="email">
@@ -38,7 +39,7 @@
             <p class="password">Password</p>
             <input id="inp5" type="password">
             <h4>Allready have account ? <a href="login.html">Log in</a></h4>
-                <button class="btn">Creat account</button>
+                <button class="btn" id="btnC">Create account</button>
         </div>
         <div class="contact">
             <div class="exclusive">
@@ -83,6 +84,7 @@
         </div>
         </div>
 
-        <script src="creataccount.js"></script>
+        <!-- <script src="creataccount.js"></script> -->
+         <script src="./creataccount.js"></script>
 </body>
 </html>
