--- a/creatproduct.html
+++ b/creatproduct.html
@@ -13,36 +13,38 @@
             <p>Summer Sale For All Swim And Free Express Delivery - OFF 50%</p>
             <a href="shop.html">Shop now</a>
         </div>
-        <div class="menu">
-            <h2>E-commerce</h2>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <a href="creataccount.html">Sign Up</a>
-            <a href="shop.html"> Shop</a>
-        <input type="text" placeholder="What you looking for?">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <p>Username</p>
-        <a href="login.html" class="log">Log in</a>
-        </div>
+         <div class="menu">
+        <h1>E-commerce</h1>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="creataccount.html">Sign Up</a>
+        <a href="shop.html"> Shop</a>
+    <input type="text" placeholder="What you looking for?">
+    <i class="fa-solid fa-magnifying-glass"></i>
+    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+    <a href="./userdetail.html"><i class="fa-solid fa-user"></i></a>
+    <p class="un" id="username11">Username</p>
+      <button class="log" id="logBtn">Log in</button>
+    </div>
 <div class="creatproduct">
     <h1>Creat product</h1>
     <p>Brand</p>
     <input type="text" id="brand">
     <p>Model</p>
     <input type="text" id="model">
-    <p>categories</p>
+    <p>Categories</p>
     <input type="text" id="categories">
     <p>Description</p>
-    <input type="text" id="Description">
-    <p>price</p>
+    <textarea name="" id="Description"></textarea>
+    <p>Price</p>
     <input type="number" id="price">
     <p>Image URL</p>
     <div class="img">
         <img src="" alt="" id="img1">
     </div>
     <input type="url" id="Img">
-    <button onclick="func1()">Save</button>
+    <button class="save" onclick="func1()">Save</button>
 </div>
     </div>
     <script src="creatproduct.js"></script>
