--- a/newproduct.html
+++ b/newproduct.html
@@ -3,45 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="newproduct.css">
+    <link rel="stylesheet" href="./newproduct.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
-    <div class="parent">
-        <div class="sale">
-            <p>Summer Sale For All Swim And Free Express Delivery - OFF 50%</p>
-            <a href="shop.html">Shop now</a>
-        </div>
-        <div class="menu">
-            <h2>E-commerce</h2>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <a href="creataccount.html">Sign Up</a>
-            <a href="shop.html"> Shop</a>
-        <input type="text" placeholder="What you looking for?">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <p>Username</p>
-        <a href="login.html" class="log">Log in</a>
-        </div>
-    <div class="newproduct">
-        <a href="creatproduct.html"> New product</a>
+    <div class="discountRed">
+        <p>Summer sale for all swim suit and free express delivery - OFF 50%! <a href="">ShopNow</a></p>
     </div>
-            <table >
+        <div class="menu">
+            <div >
+                <a href="./index.html">E-commerce</a>
+                <a href="./index.html">Home</a>
+                <a href="./contact.html">Contact</a>
+                <a href="./about.html">About</a>
+                <a href="./creataccount.html">Sign Up</a>
+                <a href="./shop.html">Shop</a>
+            </div>
+            <div class="section2 flex">
+                <input type="search" placeholder="What are you looking for ?">
+                <i class="fa-solid fa-magnifying-glass"></i>
+       <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="./userdetail.html"><i class="fa-solid fa-user"></i></a>
+                <p id="user">username</p>
+                <button onclick="logOut()">log out</button>
+            </div>
+        </div>
+  
+
+        <button class="newProduct" onclick="newComp()">New Product</button>
+        <div class="myProducts">
+            <table>
                 <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>Бренд</th>
-                        <th>модель</th>
-                        <th>Категория</th>
-                        <th>Изображение</th>
-                        <th>Цена</th>
-                        <th>операции</th>
+                        <th>Id</th>
+                     <th>Бренд</th>
+                    <th>Модель</th>
+                    <th>Категория</th>
+                    <th>Изображение</th>
+                    <th>Цена</th>
+                    <th>Рейтинг</th>
+                    <th>Операции</th>
                     </tr>
                 </thead>
-                </table>
-    </div>
-    <script src="newproduct.js"></script>
+                <tbody id="addedItems">
+
+                </tbody>
+            </table>
+        </div>
+        <script src="./newproduct.js"></script>
 </body>
 </html>
