--- a/shop.html
+++ b/shop.html
@@ -22,56 +22,54 @@
             <a href="shop.html"> Shop</a>
         <input type="text" placeholder="What you looking for?">
         <a href="" class="fa-solid fa-magnifying-glass"></a>
-        <p class="user">Username</p>
-        <a href="login.html" class="log">Log in</a>
+             <a href="./userdetail.html"><i class="fa-solid fa-user"></i></a>
+       <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <p class="un" id="username11">Username</p>
+    <button class="log" id="logBtn">Log out</button>
         </div>
-        <div class="shop2">
+
+        <div class="flex">
+ <div class="sidebar">
             <h1>Shop</h1>
-            <div class="search">
-                <input type="text" placeholder="search"><button>All product</button>
-            </div>
-            <div class="categoty">
-                <h1>categories</h1>
-                <select name="" id="">
-                    <option value="">Phone</option>
-                    <option value="">tablets</option>
-                    <option value="">Laptop</option>
-                    <option value="">PC</option>
-                    <option value="">Gaming PC</option>
-                    <option value="">Console</option>
-                    <option value="">Console's Accessories</option>
-                </select>
-            </div>
-            <div class="rate">
-                <h1>Rate</h1>
-                <h1>★★★★★</h1>
-                <h1>★★★★☆</h1>
-                <h1>★★★☆☆</h1>
-                <h1>★★☆☆☆</h1>
-                <h1>★☆☆☆☆</h1>
+            <input type="text" placeholder="Search">
+            <button class="all-products">All products</button>
+            <h2>Category</h2>
+            <ul>
+                <li>Laptops</li>
+                <li>Gaming</li>
+                <li>Accessories</li>
+                <li>Electronics</li>
+                <li>Audio</li>
+                <li>Wearables</li>
+                <li>Tablets</li>
+            </ul>
+            <h2>Rate</h2>
+            <div class="rating">
+                <span>★★★★★</span><br>
+                <span>★★★★☆</span><br>
+                <span>★★★☆☆</span><br>
+                <span>★★☆☆☆</span><br>
+                <span>★☆☆☆☆</span>
             </div>
         </div>
-        <div class="select">
-            <select name="" id="">
-                <option value="">Sort by</option>
-            </select>
-        </div>
+        
+    <div class="leftH">
         <div class="goods">
-            <div class="good1 ">
+            <div class="good1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjOg3t-Txbu3lEnOXVNMMM2bdcxuLTH_akhg&s" alt="">
                 <h3>Dell XPS 13</h3>
                 <p class="red"></p>
                 <p class="rate">★★★★☆</p>
                 <button class="add">add to cart</button>
             </div>
-            <div class="good2 " >
+            <div class="good2">
                 <img src="https://media.very.co.uk/i/very/RKMLN_SQ1_0000000017_RED_SLf?$pdp_300x400_x2$&fmt=jpg" alt="">
                 <h3> XBOX Controller </h3>
                 <p class="red"></p>
                 <p class="rate">★★★★☆</p>
                 <button class="add">add to cart</button>
             </div>
-            <div class="good3 ">
+            <div class="good3">
                 <img src="https://media.johnlewiscontent.com/i/JohnLewis/239052687alt1?$rsp-pdp-port-320$" alt="">
                 <h3> Sony PS5 controller </h3>
                 <p class="red"></p>
@@ -89,7 +87,7 @@
         <div class="goods2">
             <div class="good5">
                 <img src="https://www.sony-mea.com/image/6145c1d32e6ac8e63a46c912dc33c5bb?fmt=pjpeg&wid=330&bgcolor=FFFFFF&bgc=FFFFFF" alt="">
-                <h3> sony wh-10000xm5 </h3>
+                <h3>Sony wh-10000xm5 </h3>
                 <p class="red"></p>
                 <p class="rate">★★★★☆</p>
                 <button class="add">add to cart</button>
@@ -103,7 +101,7 @@
             </div>
             <div class="good7">
                 <img src="https://istore.am/product_image/2179/1726734911_90a21bbd7f03f1e7391d.jpgApple%20Watch%20Ultra%202%20GPS%20+%20Cellular%2049mm%20Natural%20Titanium%20Case%20with%20Tan%20Alpine%20Loop%20-%20Small.jpg" alt="">
-                <h3>apple watch 445</h3>
+                <h3>Apple watch 445</h3>
                 <p class="red"></p>
                 <p class="rate">★★★★☆</p>
                 <button class="add">add to cart</button>
@@ -116,7 +114,14 @@
                 <button class="add">add to cart</button>
             </div>
         </div>
-        <a href="cart.html">cart</a>
+        </div>
+
+        </div>
+
+        <div class="footer">
+            <img src="./stttsrty.jpg" alt="">
+        </div>
+        <!-- <a href="cart.html">cart</a> -->
 </div>
         <script src="shop.js"></script>
 </body>
