--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
@@ -22,9 +22,10 @@
         <a href="shop.html"> Shop</a>
     <input type="text" placeholder="What you looking for?">
     <i class="fa-solid fa-magnifying-glass"></i>
-    <i class="fa-solid fa-user"></i>
+           <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+         <a href="./userdetail.html"><i class="fa-solid fa-user"></i></a>
     <p class="un" id="username11">Username</p>
-      <button class="log" id="logBtn">Log in</button>
+      <button class="log" id="logBtn">Log out</button>
     </div>
     <div class="img">
         <img src="https://th.bing.com/th/id/OIP.nChCJB-fuVcN_a6ufgwNKwHaFR?cb=iwc2&w=800&h=569&rs=1&pid=ImgDetMain" alt="">
@@ -105,6 +106,6 @@
      <div class="footer">
             <img src="./stttsrty.jpg" alt="">
         </div>
-    <script src="./script.js"></script>
+    <script src="./script2.js"></script>
 </body>
 </html>
