--- a/login.html
+++ b/login.html
@@ -22,10 +22,13 @@
             <a href="shop.html"> Shop</a>
         <input type="text" placeholder="What you looking for?">
         <i href="" class="fa-solid fa-magnifying-glass"></i>
+             <a href="./userdetail.html"><i class="fa-solid fa-user"></i></a>
         <p class="user">Username</p>
-        <a href = "login.html" >Log in</a>
+        <button class="log" id="logBtn">Log in</button>
         </div>
-        <div class="login">
+
+        <div class="main">
+                 <div class="login">
             <h1>Log in</h1>
             <p class="name">Name</p>
             <input id="inp12" type="text">
@@ -33,8 +36,9 @@
             <input id="inp22" type="password">
             <h4>Don't have account ? <a href="creataccount.html">sign up</a></h4>
             <div class="button">
-                <a href="index.html" id="btn2">Log in</a>
+                <button href="" id="btn2">Log in</button>
             </div>
+        </div>
         </div>
     </div>
     <script src="./login.js"></script>
